# aind-beh-ephys-analysis

./: README.md  test_output_1.csv
.claude/: 9552c32d-5a20-4bd3-8fac-c143f60af1dc.jsonl  settings.json  settings.json.tmp.2615223.73e95d8b2c51  settings.local.json
.codeocean/: datasets.json  secrets.json
code/: preprocessing_opto_response.ipynb  run  run_capsule.py  test_nwb_packaging.ipynb
code/beh_ephys_analysis/: 0_behavior_and_time_alignment.ipynb  0_behavior_and_time_alignment.py  0_time_alignment.ipynb  1_single_session_analyss.ipynb  ani_glm.ipynb  antidromic_analysis.ipynb  antidromic_analysis_over_sessions.ipynb  antidromic_analysis_summary.ipynb  antidromic_funcs.py  append_anti.ipynb  append_ccf.ipynb  beh_ephys_processing.ipynb  beh_functions.py  beh_mertics.py  beh_unit_analysis.ipynb  behavior_and_time_alignment.py  ccf_check.ipynb  ccf_generation.py  check_waveform_quality.ipynb  clean_notebooks.ipynb  count_neurons.ipynb  cross_auto_corr.py  cross_corr.ipynb  data.json  drift_analysis.py  ephys_feature_check.ipynb  ephys_functions.py  ephys_spatial_feature.py  ephys_trace_check.ipynb  example_tbl.csv  extract_pc.ipynb  extract_raw_traces.ipynb  extract_raw_traces_func.py  hopkins_analyzer.ipynb  hopkins_pack_analyzer.py  hopkins_sorting_analyzer.ipynb  infer_spike_rate.ipynb  lick_train_analysis.ipynb  lick_video_analysis.ipynb  lick_video_analysis.py  (+46 more)
code/data_management/: LC-NE_probe_annotation.csv  ZS056.xlsx  ZS059.xlsx  (+58 more)
environment/: Dockerfile  environment.yml  postInstall
metadata/: metadata.yml
src/aind-multisession-ephys/: pyproject.toml
src/aind-multisession-ephys/environment/: Dockerfile  environment.yml  postInstall
src/aind-multisession-ephys/metadata/: metadata.yml
src/aind-multisession-ephys/src/aind_multisession_ephys/data_management/: clear_all_data_assets.py  cortex_tagged_units.csv  de-mount_data_multi.py  mount_data_multi.py  np2.0_tag.csv  np_opto_assets.csv
src/aind-multisession-ephys/src/aind_multisession_ephys/opto_tagging/: 0_opto_tag_session_preprocessing.ipynb  2_multi_session.ipynb  3_load_tagged_units.ipynb  4_clustering_2.0.ipynb  4_clustering_npopto.ipynb  filter_data_assets.ipynb  opto_tag_session_preprocessing_check_align.ipynb  patch_clustering.ipynb  test.npy
(+183 files in other folders)
